[package]
name = "bip39"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "*" 
bip39 = { version = "*", features = ["all-languages"] }
bitcoin = "*"
bs58 = "*"
crossterm = "*"
ed25519-dalek = "*"
hex = "*"
hmac = "*"
pbkdf2 = "*"
rand = { version = "0.8", features = ["std"] }
ratatui = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
slip10 = "*"
sskr = "*"
terminal_size = "*"
tiny-keccak = { version = "*", features = ["keccak"] }
